--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
                 <h1 class="opcao">Escolha uma opção</h1>
 
-                <div>
+                <div class="menu">
 
                     <a href="html/pregadores.html"><p class="menu menu-pregar">Pregadores do Mês</p></a>
                     <a href="html/louvor.html"><p class="menu menu-louvor">Serviço de Cântico</p></a>
