--- a/html/louvor.html
+++ b/html/louvor.html
@@ -41,7 +41,7 @@
 
         <div class="div-btn-home">
 
-            <a href="../index.html"><button>HOME</button></a>
+            <a href="../index.html"><button>VOLTAR</button></a>
 
         </div>
 
@@ -87,6 +87,12 @@
 
             </div>
             
+        </div>
+
+        <div class="div-btn-home">
+
+            <a href="../index.html"><button>VOLTAR</button></a>
+
         </div>
 
         <footer>
